--- a/style.css
+++ b/style.css
@@ -11,9 +11,50 @@ th {
   border: 1px solid #333;
 }
 
+h2,
+h3 {
+  margin: 0;
+}
+
 .container {
   margin: 40px auto;
   width: 70%;
+  display: grid;
+  grid-template-areas:
+    "header header"
+    "aside main"
+    "footer footer";
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: auto;
 }
 
+header {
+  padding: 40px 0px;
+  grid-area: header;
+  display: grid;
+  place-content: center;
+  background-image: url(/assets/banner.jpg);
+  background-size: cover;
+  background-position: center;
+  text-align: center;
+}
 
+header .heading {
+  color: white;
+}
+
+aside {
+  padding: 40px 0px;
+  grid-area: aside;
+}
+
+main {
+  padding: 40px 0px;
+  grid-area: main;
+}
+
+footer {
+  grid-area: footer;
+  padding: 40px 0px;
+  text-align: center;
+}
