--- a/assets/style.css
+++ b/assets/style.css
@@ -33,7 +33,7 @@ header {
   grid-area: header;
   display: grid;
   place-content: center;
-  background-image: url(./assets/banner.jpg);
+  background-image: url(/assets/images/banner.jpg);
   background-size: cover;
   background-position: center;
   text-align: center;
